Fix for Bug 6346 - Patron search results should be valigned top
I'm going for the nuclear option: Let's valign-top all table cells.
Having vertical-align : middle really only works well if your
table cells have the same height.

(cherry picked from commit 7d2839dbd6ea15243c5f41a36a4078d0ca02f7c9)

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -254,6 +254,7 @@ td, th {
 
 td {
 	background-color : White;
+	vertical-align : top;
 }
 
 td.borderless {
